--- a/src/App.css
+++ b/src/App.css
@@ -13,7 +13,7 @@ body {
   padding: 2rem;
 }
 
-.logo {
+/* .logo {
   height: 6em;
   padding: 1.5em;
   will-change: filter;
@@ -24,9 +24,9 @@ body {
 }
 .logo.react:hover {
   filter: drop-shadow(0 0 2em #61dafbaa);
-}
+} */
 
-@keyframes logo-spin {
+/* @keyframes logo-spin {
   from {
     transform: rotate(0deg);
   }
@@ -39,11 +39,11 @@ body {
   a:nth-of-type(2) .logo {
     animation: logo-spin infinite 20s linear;
   }
-}
+} */
 
-.card {
+/* .card {
   padding: 2em;
-}
+} */
 
 .read-the-docs {
   color: #888;
@@ -87,7 +87,7 @@ li {
 }
 
 button {
-  background-color: #4caf50;
+  /* background-color: #4caf50; */
   color: white;
   border: none;
   padding: 10px 14px;
@@ -97,9 +97,9 @@ button {
   transition: background 0.3s ease;
 }
 
-button:hover {
+/* button:hover {
   background-color: #45a049;
-}
+} */
 
 /* Logo Styles (Optional) */
 .logo {
@@ -150,7 +150,7 @@ input,
 textarea {
   padding: 12px 16px;
   border: 1px solid #ccc;
-  border-radius: 6px;
+  border-radius: 20px;
   font-size: 1rem;
   font-family: inherit;
   transition: border-color 0.3s ease;
